--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,10 +1,10 @@
 
 maci_order_edit_cart_item:
-    pattern:  /cart/item/{id}/edit
+    pattern:  /cart/item/edit/{id}
     defaults: { _controller: MaciOrderBundle:Default:editCartItem }
 
 maci_order_remove_cart_item:
-    pattern:  /cart/item/{id}/remove
+    pattern:  /cart/item/remove/{id}
     defaults: { _controller: MaciOrderBundle:Default:removeCartItem }
 
 maci_order_checkout_set_address:
@@ -19,9 +19,9 @@ maci_order_invoice:
     pattern:  /order/invoice/{id}
     defaults: { _controller: MaciOrderBundle:Default:invoice }
 
-# maci_order_test:
-#     pattern:  /order/test/{id}
-#     defaults: { _controller: MaciOrderBundle:Default:test, id: 0 }
+maci_order_checkout_set_checkout:
+    pattern:  /cart/checkout/set-checkout/{checkout}
+    defaults: { _controller: MaciOrderBundle:Default:cartSetCheckout, checkout: checkout }
 
 maci_order_checkout_set_mail:
     pattern:  /cart/checkout/set-mail
