--- a/Resources/config/doctrine/Order.orm.yml
+++ b/Resources/config/doctrine/Order.orm.yml
@@ -73,6 +73,8 @@ Maci\OrderBundle\Entity\Order:
             type: datetime
         updated:
             type: datetime
+        removed:
+            type: boolean
     manyToOne:
         user:
             targetEntity: Maci\UserBundle\Entity\User
